# Coinfair-Solana

./: Anchor.toml  Cargo.toml  README.md
programs/amm/: Cargo.toml
programs/amm/src/: lib.rs
programs/amm/src/instructions/: swap_v2.rs
programs/amm/src/states/: config.rs  oracle.rs  pool.rs
programs/amm/src/util/: token.rs
programs/referral/: Cargo.toml
programs/referral/src/: error.rs  lib.rs
programs/referral/src/instructions/: claim_nft.rs  get_upper.rs  init_config.rs  mint_nft.rs  mod.rs  set_upper.rs
