[package]
name = "referral"
version = "0.1.0"
edition = "2021"

[lib]
name = "referral"
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
mpl-token-metadata = { version = "1.7.0", features = ["no-entrypoint"] }

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
# stevekeol
default = ["localnet"]
client = []
no-log-ix-name = []
init_if_needed = []
enable-log = []
devnet = []
# stevekeol
localnet = []
paramset = []

# stevekeol
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1